--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ native
 # NPM
 #//////////////////////////
 node_modules/
-
+extensions/
 #//////////////////////////
 # VSCode
 #//////////////////////////
