--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -34,6 +34,10 @@
       {
         "index": 6,
         "name": "testItem"
+      },
+      {
+        "index": 7,
+        "name": "UIButton"
       }
     ],
     "collisionMatrix": {
